--- a/libs/libft/Makefile
+++ b/libs/libft/Makefile
@@ -3,10 +3,10 @@
 #                                                         :::      ::::::::    #
 #    Makefile                                           :+:      :+:    :+:    #
 #                                                     +:+ +:+         +:+      #
-#    By: gcoqueir <gcoqueir@student.42.fr>          +#+  +:+       +#+         #
+#    By: acesar-m <acesar-m@student.42.fr>          +#+  +:+       +#+         #
 #                                                 +#+#+#+#+#+   +#+            #
-#    Created: 2023/06/12 09:09:09 by gcoqueir          #+#    #+#              #
-#    Updated: 2023/07/25 08:13:04 by gcoqueir         ###   ########.fr        #
+#    Created: 2025/03/18 15:39:16 by acesar-m          #+#    #+#              #
+#    Updated: 2025/03/18 15:39:18 by acesar-m         ###   ########.fr        #
 #                                                                              #
 # **************************************************************************** #
 
